fixed button positioning on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,6 +110,7 @@ h1{
 button{
 	margin-left : 15vw;
 	margin-right : 15vw;
+	margin-bottom: 8vh;
 	border-radius: 10px;
 	background-color: #a6a6a6;
 	font-size: 20px;
